test/corpus/operators.txt
===
Lambda Syntax
===

(a, b, c) => a + b + c
(a) => a + 1
a => a - 1
(a => a + 1)
(=> 42)
((_=None) => 42)
() => 42

---

(module
	(expression_statement
		(lambda
			(lambda_parameters
				(identifier)
				(identifier)
				(identifier))
			(binary_operator
				(binary_operator
					(identifier)
					(identifier))
				(identifier))))
	(expression_statement
		(lambda
			(lambda_parameters
				(identifier))
			(binary_operator
				(identifier)
				(integer))))
	(expression_statement
		(lambda
			(lambda_parameters
				(identifier))
			(binary_operator
				(identifier)
				(integer))))
	(expression_statement
		(parenthesized_expression
			(lambda
				(lambda_parameters
					(identifier))
				(binary_operator
					(identifier)
					(integer)))))
	(expression_statement
		(parenthesized_expression
			(lambda
					(integer))))
	(expression_statement
		(parenthesized_expression
			(lambda
				(lambda_parameters
					(default_parameter
						(identifier)
						(none)))
					(integer))))
	(expression_statement
		(lambda
			(lambda_parameters)
			(integer))))

